<resources>
    <string name="app_name">OpeninApp Assignment</string>
    <string name="links">Links</string>
    <string name="courses">Courses</string>
    <string name="campaigns">Campaigns</string>
    <string name="profile">Profile</string>
    <string name="dashboard">Dashboard</string>
    <string name="good_morning">Good Morning</string>
    <string name="ajay_manva">Ajay Manva</string>
    <string name="today_s_clicks">Today\'s clicks</string>
    <string name="top_location">Top Location</string>
    <string name="top_source">Top source</string>
    <string name="view_analytics">View Analytics</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="top_links">Top Links</string>
    <string name="recent_links">Recent Links</string>
    <string name="clicks">Clicks</string>
    <string name="view_all_links">View All Links</string>
    <string name="talk_with_us">Talk with us</string>
    <string name="all_links">All links</string>
    <string name="overview">Overview</string>
    <string name="date_filter">22 Aug - 23 Sept</string>
</resources>