<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="@dimen/offset_28"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title_good_morning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/offset_16"
        android:layout_marginTop="@dimen/offset_32"
        android:background="@drawable/bg_text_placeholder"
        android:fontFamily="@font/figtree_regular"
        android:text="@string/good_morning"
        android:textColor="@color/spanish_gray"
        android:textSize="@dimen/font_16" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/offset_16"
        android:layout_marginTop="@dimen/offset_4"
        android:background="@drawable/bg_text_placeholder"
        android:drawablePadding="@dimen/offset_8"
        android:fontFamily="@font/figtree_medium"
        android:gravity="center"
        android:text="@string/ajay_manva"
        android:textColor="@color/spanish_gray"
        android:textSize="@dimen/font_24" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_chart"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginHorizontal="@dimen/offset_16"
        android:layout_marginTop="@dimen/offset_24"
        app:cardBackgroundColor="@color/spanish_gray"
        app:strokeWidth="@dimen/length_0">

    </com.google.android.material.card.MaterialCardView>

    <HorizontalScrollView
        android:id="@+id/rv_analytics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/offset_16"
        android:layout_marginTop="@dimen/offset_20"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_total_clicks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/length_8"
                app:strokeWidth="@dimen/length_0">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/offset_12"
                        android:layout_marginTop="@dimen/offset_12"
                        android:background="@color/spanish_gray"
                        android:src="@drawable/ic_clicks"
                        app:shapeAppearanceOverlay="@style/RoundedImageView"
                        app:tint="@color/spanish_gray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/offset_12"
                        android:layout_marginTop="@dimen/offset_16"
                        android:background="@drawable/bg_text_placeholder"
                        android:fontFamily="@font/figtree_medium"
                        android:text="123"
                        android:textColor="@color/spanish_gray"
                        android:textSize="@dimen/font_16" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/offset_12"
                        android:layout_marginEnd="@dimen/offset_24"
                        android:layout_marginStart="@dimen/offset_12"
                        android:layout_marginTop="@dimen/offset_4"
                        android:background="@drawable/bg_text_placeholder"
                        android:drawablePadding="@dimen/offset_8"
                        android:fontFamily="@font/figtree_medium"
                        android:text="@string/today_s_clicks"
                        android:textColor="@color/spanish_gray" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_top_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/offset_16"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/length_8"
                app:strokeWidth="@dimen/length_0">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/offset_12"
                        android:layout_marginTop="@dimen/offset_12"
                        android:background="@color/spanish_gray"
                        android:src="@drawable/ic_location"
                        app:shapeAppearanceOverlay="@style/RoundedImageView"
                        app:tint="@color/spanish_gray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/offset_12"
                        android:layout_marginTop="@dimen/offset_16"
                        android:background="@drawable/bg_text_placeholder"
                        android:fontFamily="@font/figtree_medium"
                        android:text="Aham"
                        android:textColor="@color/spanish_gray"
                        android:textSize="@dimen/font_16" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/offset_12"
                        android:layout_marginEnd="@dimen/offset_24"
                        android:layout_marginStart="@dimen/offset_12"
                        android:drawablePadding="@dimen/offset_8"
                        android:layout_marginTop="@dimen/offset_4"
                        android:background="@drawable/bg_text_placeholder"
                        android:fontFamily="@font/figtree_medium"
                        android:text="@string/top_location"
                        android:textColor="@color/spanish_gray" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/offset_16"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/length_8"
                app:strokeWidth="@dimen/length_0">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/offset_12"
                        android:layout_marginTop="@dimen/offset_12"
                        android:background="@drawable/bg_text_placeholder"
                        android:src="@drawable/ic_source"
                        app:shapeAppearanceOverlay="@style/RoundedImageView"
                        app:tint="@color/spanish_gray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/offset_12"
                        android:layout_marginTop="@dimen/offset_16"
                        android:background="@drawable/bg_text_placeholder"
                        android:fontFamily="@font/figtree_medium"
                        android:text="Insta"
                        android:textColor="@color/spanish_gray"
                        android:textSize="@dimen/font_16" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/offset_12"
                        android:layout_marginEnd="@dimen/offset_24"
                        android:layout_marginStart="@dimen/offset_12"
                        android:layout_marginTop="@dimen/offset_4"
                        android:background="@drawable/bg_text_placeholder"
                        android:drawablePadding="@dimen/offset_8"
                        android:fontFamily="@font/figtree_medium"
                        android:text="@string/top_source"
                        android:textColor="@color/spanish_gray" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </HorizontalScrollView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_view_analytics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/offset_16"
        android:layout_marginTop="@dimen/offset_20"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="@dimen/length_8"
        app:strokeColor="@color/light_silver"
        app:strokeWidth="@dimen/length_1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/offset_12"
            android:background="@drawable/bg_text_placeholder"
            android:drawablePadding="@dimen/offset_12"
            android:fontFamily="@font/figtree_medium"
            android:gravity="center"
            android:text="@string/view_analytics"
            android:textColor="@color/spanish_gray"
            android:textSize="@dimen/font_16"
            app:drawableStartCompat="@drawable/ic_analytics"
            app:drawableTint="@color/spanish_gray" />
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>